app-library/k8s/infrastructure/dev/patches/api-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-ssl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  rules:
  - host: library.penguin27.com
    http:
      paths:
      - backend:
          service:
            name: library-api-svc
            port:
              number: 8000
        path: /
        pathType: Prefix

status:
  loadBalancer: {}
